# selloai

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260630_0001_initial.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  groq.py  prompts.py  services.py
apps/api/app/auth/: dependencies.py  router.py  schemas.py  services.py
apps/api/app/channels/: __init__.py  models.py  router.py  schemas.py  services.py
apps/api/app/conversations/: models.py  router.py  schemas.py  services.py
apps/api/app/core/: __init__.py  config.py  database.py  enums.py  errors.py  logging.py  model_imports.py  models.py  redis.py  router.py  security.py
apps/api/app/customers/: models.py  router.py  schemas.py  services.py
apps/api/app/handoff/: __init__.py
apps/api/app/instagram/: __init__.py  client.py  graph_errors.py  handlers.py  router.py  schemas.py  service.py
apps/api/app/knowledge_base/: models.py  router.py  schemas.py  services.py
apps/api/app/messages/: __init__.py  models.py  schemas.py  services.py
apps/api/app/oauth/: __init__.py  audit.py  crypto.py  schemas.py
apps/api/app/organizations/: __init__.py  models.py  router.py  schemas.py  services.py
apps/api/app/settings/: models.py  router.py  schemas.py
apps/api/tests/: conftest.py  test_auth_organizations.py  test_instagram.py  test_knowledge_base.py  test_telegram_ai.py
(+29 files in other folders)
